FIX: Tests and training notebook
Remove development scratch pad that was being picked up as a test
and correct error in training notebook

--- a/Training/Overview/Overview_of_the_AWRA_CMS_functionality.ipynb
+++ b/Training/Overview/Overview_of_the_AWRA_CMS_functionality.ipynb
@@ -468,7 +468,7 @@
    "outputs": [],
    "source": [
     "best_params = cr.get_best_paramset()\n",
-    "new_params = pd.DataFrame(best_params, columns=['Value'])\n",
+    "new_params = pd.DataFrame(best_params, columns=['value'])\n",
     "new_params['MemberName'] = new_params.index"
    ]
   },
@@ -490,7 +490,7 @@
     "    import pandas as pd\n",
     "    \n",
     "    variable_names = param_df['MemberName']\n",
-    "    variable_value = param_df['Value']\n",
+    "    variable_value = param_df['value']\n",
     "      \n",
     "    for k,v in zip(variable_names, variable_value):\n",
     "        imap[k.lower()].args['value'] = v\n",
