Updated Training/Basics notebooks

--- a/Training/Basics/1.4_AWRA-L_deconstructed_-_Python_version_of_AWRA-L_v6.ipynb
+++ b/Training/Basics/1.4_AWRA-L_deconstructed_-_Python_version_of_AWRA-L_v6.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "    - A. Calculate saturated fraction of cell/catchment for a given groundwater storage (Sg) [a single store - no HRUs]\n",
     "    - B. Calculate potential evaporation (E0) according to Energy balance [for each HRU]\n",
-    "    - C. Calculate actual ET based on E0, water storage and vegatation state [for each HRU]\n",
-    "    - D. Calculate Water balance and flows [for each HRU]\n",
-    "    - E. Calculate Vegetation growth and senescence [for each HRU]\n",
+    "    - C. Calculate actual ET based on E0, water storage and vegetation state [for each HRU]\n",
+    "    - D. Calculate water balance and flows [for each HRU]\n",
+    "    - E. Calculate vegetation growth and senescence [for each HRU]\n",
     "    - F. Get cell values of variables weighting shallow and deep rooted components depending on fraction of each\n",
     "\n",
     "These components are coded in Python below (rather than C) to facilitate understanding and testing the AWRA-L model.\n",
@@ -82,7 +82,7 @@
     "#   1. Load model profile for awral model\n",
     "from awrams.utils import config_manager\n",
     "\n",
-    "model_profile = config_manager.get_model_profile('awral', 'v5_default')\n",
+    "model_profile = config_manager.get_model_profile('awral', 'v6_default')\n",
     "\n",
     "###########################################################################\n",
     "#   2.  Define extent and period\n",
@@ -157,14 +157,14 @@
     "\n",
     "# Transfer inputs\n",
     "# transfer climate inputs contained in i\n",
-    "forcing = ('tmin_f','tmax_f','solar_f','precip_f', 'u2t')\n",
+    "forcing = ('tmin_f','tmax_f','solar_f','precip_f', 'wind_f')\n",
     "clm = {k: inputs[k].reshape(-1) for k in forcing}\n",
     "df_clm = pd.DataFrame(clm, index=my_period)\n",
     "# transfer grid inputs to an array for use later\n",
     "grid_names = [\n",
-    "    'f_tree_grid','hveg_dr_grid','k0sat_v5_grid','k_gw_grid','kdsat_v5_grid',\n",
-    "    'kssat_v5_grid','lai_max_grid','meanpet_grid','ne_grid','pref_grid',\n",
-    "    's0fracawc_grid','slope_grid','ssfracawc_grid', 'windspeed_grid'\n",
+    "    'f_tree_grid','hveg_dr_grid','k0sat_grid','k_gw_grid','kdsat_grid',\n",
+    "    'kssat_grid','lai_max_grid','meanpet_grid','ne_grid','pref_grid',\n",
+    "    's0fracawc_grid','slope_grid','ssfracawc_grid','sdfracawc_grid'\n",
     "]\n",
     "# get the values of the grids for your location/extent through i\n",
     "grids = {k: inputs[k][0] for k in grid_names}\n",
@@ -265,8 +265,8 @@
     "\n",
     "\n",
     "Equations and sections quoted are from the: \n",
-    "  - **BoM model description report**: Frost, A. J., Ramchurn, A., and Smith, A. 2016b. The Bureau’s Operational AWRA Landscape (AWRA-L) Model. Bureau of Meteorology Technical Report.\n",
-    "http://www.bom.gov.au/water/landscape/static/publications/Frost__Model_Description_Report.pdf\n",
+    "  - **BoM model description report**: Frost, A. J., Ramchurn, A., and Smith, A. 2018. The Australian Landscape Water Balance model (AWRA-L v6). Technical Description of the Australian Water Resources Assessment Landscape model version 6.\n",
+    "http://www.bom.gov.au/water/landscape/assets/static/publications/AWRALv6_Model_Description_Report.pdf\n",
     "\n",
     "Further details of the model development and derivation can ve found in:\n",
     "\n",
@@ -350,7 +350,7 @@
     "# Ssmax: maximum storage of the shallow (10-100cm) soil layer [mm] : Eqn 15\n",
     "Ssmax = 900 * df_spgrids['ssfracawc_grid'] * ssmax_scale\n",
     "# Sdmax: maximum storage of the deep (100-600cm) soil layer [mm] : Eqn 16\n",
-    "Sdmax = 5000 / 900 * Ssmax * sdmax_scale\n",
+    "Sdmax = 5000 * df_spgrids['sdfracawc_grid'] * sdmax_scale\n",
     "\n",
     "print('Example constants:')\n",
     "print('ne =', ne, 'Effective porosity (ne)')\n",
@@ -835,17 +835,12 @@
     "plt.ylabel('Vapour pressure [Pa]')\n",
     "plt.title('Vapour pressure: Actual (pe) and Saturation (pes)')\n",
     "print('Air pressure (pair)=', pair)\n",
-    "# u2: Effective daily wind speed at 2m [m/s] \n",
-    "# note that the wind is transformed prior according to wspeed_grid * ((1 - (1 - fday) * 0.25) / fday)\n",
-    "# where fday is the fraction of daylight hours\n",
-    "# see van Dijk (2010) Eqn [3-12] and file the below where the pretransform is undertaken\n",
-    "# ../../models/awrams/models/awral/transforms.py\n",
-    "u2 = df_clm['u2t']\n",
     "# plot wind\n",
+    "u2 = df_clm['wind_f']\n",
     "plt.figure(figsize=(16, 2))\n",
-    "plt.plot(u2, label='Wind (u2t)')\n",
+    "plt.plot(u2, label='Wind')\n",
     "plt.ylabel('Effective windspeed [m/s]')\n",
-    "plt.title('Effective windspeed (u2t)')"
+    "plt.title('Effective windspeed')"
    ]
   },
   {
@@ -1263,9 +1258,9 @@
     "Kssat_scale = df_params[df_params['MemberName'].str.contains('Kssat_scale')]['Value'].values\n",
     "Kdsat_scale = df_params[df_params['MemberName'].str.contains('Kdsat_scale')]['Value'].values\n",
     "# Grids for hydraulic conductivity of soil layers    \n",
-    "K0sat = df_spgrids['k0sat_v5_grid'] * K0sat_scale\n",
-    "Kssat = df_spgrids['kssat_v5_grid'] * Kssat_scale\n",
-    "Kdsat = df_spgrids['kdsat_v5_grid'] * Kdsat_scale\n",
+    "K0sat = df_spgrids['k0sat_grid'] * K0sat_scale\n",
+    "Kssat = df_spgrids['kssat_grid'] * Kssat_scale\n",
+    "Kdsat = df_spgrids['kdsat_grid'] * Kdsat_scale\n",
     "# Pre-calculated relative hydraulic conductivities (kr)\n",
     "Kr_0s = K0sat / Kssat; adj_Kr0s = (Kr_0s - 1) * Kr_coeff\n",
     "Kr_sd = Kssat / Kdsat; adj_Krsd = (Kr_sd - 1) * Kr_coeff\n",
@@ -1322,14 +1317,14 @@
     "        # Timestep equation solved quadratically according to Viney et al (2015)\n",
     "        # http://www.bom.gov.au/water/landscape/static/publications/Viney_et_al_2015_AWRA_L_5.0_model_description.pdf\n",
     "        # 3.2.2.3 Updating equations for water balance of each soil layer Eqn 22-24\n",
-    "            a = km / (smax * smax);\n",
+    "            a = ksat / (smax * smax);\n",
     "            b = 1.0;\n",
     "            c = -(s[hru] + I[hru] - e[hru]);\n",
     "            s[hru] = (-b + (pow(b * b - 4. * a * c, 0.5))) / (2. * a);\n",
     "\n",
     "            pfull = (s[hru] / smax);\n",
-    "            drain[hru] = (1 - rh[hru]) * km * pfull * pfull\n",
-    "            iflow[hru] = rh[hru] * km * pfull * pfull   \n",
+    "            drain[hru] = (1 - rh[hru]) * ksat * pfull * pfull\n",
+    "            iflow[hru] = rh[hru] * ksat * pfull * pfull   \n",
     "    \n",
     "    return(drain, iflow, e, s)\n",
     "\n",
@@ -1692,7 +1687,7 @@
     "hveg = np.array([df_spgrids['hveg_dr_grid'],df_params[df_params['MemberName'].str.contains('hveg_hruSR')]['Value'].values[0]])\n",
     "fh = np.log(813. / hveg - 5.45)\n",
     "ku2 = 0.305 / (fh * (fh + 2.3))\n",
-    "ga_dr = ku2[0] * df_clm['u2t']; ga_sr = ku2[1] * df_clm['u2t'];\n",
+    "ga_dr = ku2[0] * df_clm['wind_f']; ga_sr = ku2[1] * df_clm['wind_f'];\n",
     "keps = 1.4e-3 * ((Ta / 187.0) * (Ta / 187.0) + Ta / 107.0 + 1.0) * (6.36 * pair + pe) / pes #kep=gamma/delta=psychometric constant (gamma) /slope of the saturation vapour pressure curve (delta) \n",
     "\n",
     "### Vegetation moisture uptake properties\n",
@@ -1717,7 +1712,7 @@
     "sdmax_scale = df_params[df_params['MemberName'].str.contains('Sdmax_scale')]['Value'].values # sdmax_scale: Scaling parameter for maximum storage of the deep (100-600cm) soil layer [-] : Eqn 16\n",
     "S0max = 100 * df_spgrids['s0fracawc_grid'] * s0max_scale # S0max: maximum storage of the surface (0-10cm) soil layer [mm] : Eqn 14\n",
     "Ssmax = 900 * df_spgrids['ssfracawc_grid'] * ssmax_scale # Ssmax: maximum storage of the shallow (10-100cm) soil layer [mm] : Eqn 15\n",
-    "Sdmax = 5000 / 900 * Ssmax * sdmax_scale # Sdmax: maximum storage of the deep (100-600cm) soil layer [mm] : Eqn 16\n",
+    "Sdmax = 5000 * df_spgrids['sdfracawc_grid'] * sdmax_scale # Sdmax: maximum storage of the deep (100-600cm) soil layer [mm] : Eqn 16\n",
     "# Soil properties for runoff, drainage\n",
     "Pref_gridscale = df_params[df_params['MemberName'].str.contains('Pref_gridscale')]['Value'].values  # Pref_gridscale: Scaling factor for reference precipitation (Pref_gridscale) [-]\n",
     "PrefR = df_spgrids['pref_grid'] * Pref_gridscale # PrefR: Reference value for precipitation [mm]\n",
@@ -1729,9 +1724,9 @@
     "Kssat_scale = df_params[df_params['MemberName'].str.contains('Kssat_scale')]['Value'].values\n",
     "Kdsat_scale = df_params[df_params['MemberName'].str.contains('Kdsat_scale')]['Value'].values\n",
     "# ksat: hydraulic conductivity of soil layers \n",
-    "K0sat = df_spgrids['k0sat_v5_grid'] * K0sat_scale\n",
-    "Kssat = df_spgrids['kssat_v5_grid'] * Kssat_scale\n",
-    "Kdsat = df_spgrids['kdsat_v5_grid'] * Kdsat_scale\n",
+    "K0sat = df_spgrids['k0sat_grid'] * K0sat_scale\n",
+    "Kssat = df_spgrids['kssat_grid'] * Kssat_scale\n",
+    "Kdsat = df_spgrids['kdsat_grid'] * Kdsat_scale\n",
     "# kr: relative hydraulic conductivities between soil layers\n",
     "Kr_0s = K0sat / Kssat; adj_Kr0s = (Kr_0s - 1) * Kr_coeff\n",
     "Kr_sd = Kssat / Kdsat; adj_Krsd = (Kr_sd - 1) * Kr_coeff\n",
@@ -1772,7 +1767,7 @@
     "    # Pass in daily varying input variables (direct from climate inputs or precalcualted in cell above)\n",
     "    # uses underscore '_' symbol as a suffixed to show it is a single day value\n",
     "    Ta_, pe_, pes_, RadClearSky_, delta_, gamma_, _lambda_ = df_PET.ix[day, ['Ta','pe','pes','RadClearSky','delta', 'gamma', '_lambda_']].values \n",
-    "    Pg_, u2_, Rgeff_ = df_clm.ix[day, ['precip_f','u2t', 'solar_f']].values\n",
+    "    Pg_, u2_, Rgeff_ = df_clm.ix[day, ['precip_f','wind_f', 'solar_f']].values\n",
     "    keps_ = keps[day];\n",
     "    ga_ = np.array([ga_dr[day], ga_sr[day]])\n",
     "    \n",
@@ -1902,7 +1897,7 @@
    },
    "outputs": [],
    "source": [
-    "# Names of variables avilable from python awra simulation\n",
+    "# Names of variables available from python awra simulation\n",
     "df_clm.keys()"
    ]
   },
@@ -1937,9 +1932,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check if simulation from AWRAMS system matches Python code for Etot\n",
@@ -2102,15 +2104,6 @@
     "x.plot()\n",
     "np.where(y>.1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
