--- a/Training/AWRACMS_OneDay_Training_Schedule.ipynb
+++ b/Training/AWRACMS_OneDay_Training_Schedule.ipynb
@@ -20,28 +20,30 @@
     "| 9:00- 9:15|<span style=\"color:blue\">**PART 1: AWRA FOR DATA USERS**</span> <br>**Welcome and introduction** ||\n",
     "| 9:15-10:30| **The Australian Landscape Water Balance website** <br> **and the AWRA model**||\n",
     "|10:30-10:45| **MORNING TEA BREAK** | |\n",
-    "|10:45-12:30| **Understanding, extracting, and using data ** <br> ** from the Australian Landscape Water Balance website** ||\n",
+    "|10:45-12:30| **Understanding, extracting, and using data from the Australian Landscape Water Balance website** ||\n",
     "|12:30-1:30| **LUNCH BREAK** | |\n",
-    "|1:30 -3:00|<span style=\"color:blue\">**PART 2: AWRA FOR MODELLERS AND RESEARCHERS**</span> <br>  **Introducing the AWRA-CMS package and tools** <br>**The Basics** <br>  **1.0 Python and Jupyter notebook basic**s  <br>  **1.1 The AWRA-L model** <br>  **1.2 Understanding the AWRA-CMS package and its modules** <br> **1.3 AWRA-L deconstructed - Python version of AWRA**| <br>  <br>[Basics folder] <br> [1.0]<br> [1.1]<br> [1.2]<br> [1.3]|\n",
+    "|1:30 -3:00|<span style=\"color:blue\">**PART 2: AWRA FOR MODELLERS AND RESEARCHERS**</span> <br>  **Introducing the AWRA-CMS package and tools** <br>**The Basics** <br>  **1.0 Python and Jupyter notebook basic**s  <br>  **1.1 The AWRA-L model** <br>  **1.2 Understanding the AWRA-CMS package and its modules** <br> **1.3_The_AWRA-CMS_Configuration_System.ipynb** <br> **1.4 AWRA-L deconstructed - Python version of AWRA-L v6**| <br>  <br>[Basics folder] <br> [1.0]<br> [1.1]<br> [1.2]<br> [1.3] <br> [1.4]|\n",
     "| 3:00 -3:15| **AFTERNOON TEA BREAK** |  | \n",
     "| 3:15-4:45| **Overview of the AWRA-CMS functionality** <br>Calibrating, simulating and benchmarking a region | <br> [Overview of the AWRA-CMS functionality]  |\n",
     "| 4:45 -5:00| **Summary and close course** | <br>|\n",
     "\n",
     "\n",
-    "[Basics folder]: /tree/Training/Basics\n",
+    "[Basics folder]: Basics\n",
     "[1.0]: Basics/1.0_Python_and_Jupyter_notebook_basics.ipynb\n",
-    "[1.2]: Basics/1.2_Understanding_the_AWRA_Community_Modelling_System_package_and_its_modules.ipynb\n",
     "[1.1]: Basics/1.1_The_AWRA-L_model.ipynb\n",
-    "[1.3]: Basics/1.3_AWRA-L_deconstructed_-_Python_version_of_AWRA-L.ipynb\n",
-    "[Simulation folder]: /tree/Training/Simulation\n",
+    "[1.2]: Basics/1.2_Understanding_the_AWRA_Community_Modelling_System_package_and_its_modules_AWRAv6.ipynb\n",
+    "[1.3]: Basics/1.3_The_AWRA-CMS_Configuration_System.ipynb\n",
+    "[1.4]: Basics/1.4_AWRA-L_deconstructed_-_Python_version_of_AWRA-L_v6.ipynb\n",
+    "\n",
+    "[Simulation folder]: Simulation\n",
     "[On-Demand Simulation]: Simulation/OnDemandSimulation.ipynb\n",
     "[Simulation Server]: Simulation/SimulationServer.ipynb\n",
     "[Visualisation]: Visualisation/Visualisation.ipynb\n",
     "[Extraction]: Extraction/Extraction.ipynb\n",
-    "[Benchmarking folder]: /tree/Training/Benchmarking\n",
+    "[Benchmarking folder]: Benchmarking\n",
     "[Calibration]: Calibration/CalibrationExample.ipynb\n",
-    "[Overview of the AWRA-CMS functionality]: Workspace/Overview_of_the_AWRA_CMS_functionality.ipynb\n",
-    "[Advanced folder]: /tree/Training/Advanced\n",
+    "[Overview of the AWRA-CMS functionality]: Overview/Overview_of_the_AWRA_CMS_functionality.ipynb\n",
+    "[Advanced folder]: Advanced\n",
     "[Changing the model]: Advanced/ChangingTheModel.ipynb\n",
     "[Sensitivity analysis]: Advanced/Using_a_different_optimiser__Sensitivity_analysis_and_Sobol_sampling.ipynb\n",
     "[Changing the objective function]: Advanced/AlterObjectiveFunction_DownloadBoMdata.ipynb"
