--- a/Training/AWRACMS_TwoDay_Training_Schedule.ipynb
+++ b/Training/AWRACMS_TwoDay_Training_Schedule.ipynb
@@ -22,26 +22,28 @@
     "|10:30-10:45| **MORNING TEA BREAK** | |10:45-11:00|**MORNING TEA BREAK**||\n",
     "|10:45-12:30| **Understanding, extracting, and using data ** <br> ** from the Australian Landscape Water Balance website** ||11:00-12:30|**AWRA-CMS tools: Part 2** <br> **Calibration and benchmarking** <br> - Calibration <br> - Benchmarking|<br> [Calibration] <br> [Benchmarking folder] |\n",
     "|12:30-1:30| **LUNCH BREAK** | |12:30-1:30|**LUNCH BREAK**||\n",
-    "|1:30 -3:00|<span style=\"color:blue\">**PART 2: AWRA FOR MODELLERS AND RESEARCHERS**</span> <br>  **Introducing the AWRA-CMS package and tools** <br>**The Basics** <br>  **1.0 Python and Jupyter notebook basic**s  <br>  **1.1 The AWRA-L model** <br>  **1.2 Understanding the AWRA-CMS package and its modules** <br> **1.3 AWRA-L deconstructed - Python version of AWRA**| <br>  <br>[Basics folder] <br> [1.0]<br> [1.1]<br> [1.2]<br> [1.3]|1:30 -3:00|**Advanced functionality** <br> - Altering the model code and input data <br> - Sensitivity analysis <br> - Changing objective function <br>  | <br> [Advanced folder] <br> [Changing the model] <br> [Sensitivity analysis] <br>  [Changing the objective function] <br>  <br> <br>|\n",
-    "| 3:00 -3:15| **AFTERNOON TEA BREAK** |  | 3:00 -3:15|**AFTERNOON TEA BREAK**||\n",
+    "|1:30 -3:00|<span style=\"color:blue\">**PART 2: AWRA FOR MODELLERS AND RESEARCHERS**</span> <br>  **Introducing the AWRA-CMS package and tools** <br> **The Basics** <br> **1.0 Python and Jupyter notebook basic**s  <br>  **1.1 The AWRA-L model** <br>  **1.2 Understanding the AWRA-CMS package and its modules** <br> **1.3_The_AWRA-CMS_Configuration_System.ipynb** <br> **1.4 AWRA-L deconstructed - Python version of AWRA-L v6**| <br>  <br>[Basics folder] <br> [1.0] <br> [1.1] <br> [1.2]<br> [1.3] <br> [1.4]|1:30 -3:00|**Advanced functionality** <br> - Altering the model code and input data <br> - Sensitivity analysis <br> - Changing objective function <br>  | <br> [Advanced folder] <br> [Changing the model] <br> [Sensitivity analysis] <br>  [Changing the objective function] <br>  <br> <br>|\n",
+    "| 3:00 -3:15| **AFTERNOON TEA BREAK** | | 3:00 -3:15 |**AFTERNOON TEA BREAK**||\n",
     "| 3:15-4:45| **Overview of the AWRA-CMS functionality** <br>Calibrating, simulating and benchmarking a region | <br> [Overview of the AWRA-CMS functionality]  |3:15 -4:45| **Now it is your turn:** <br> - User testing <br> - Questions <br> - Feedback| <br>|\n",
     "| 4:45 -5:00| **Summary and close day 1** | <br>|4:45 -5:00|**Summary and close course**|||\n",
     "\n",
     "\n",
-    "[Basics folder]: /tree/Training/Basics\n",
+    "[Basics folder]: Basics\n",
     "[1.0]: Basics/1.0_Python_and_Jupyter_notebook_basics.ipynb\n",
-    "[1.2]: Basics/1.2_Understanding_the_AWRA_Community_Modelling_System_package_and_its_modules.ipynb\n",
     "[1.1]: Basics/1.1_The_AWRA-L_model.ipynb\n",
-    "[1.3]: Basics/1.3_AWRA-L_deconstructed_-_Python_version_of_AWRA-L.ipynb\n",
-    "[Simulation folder]: /tree/Training/Simulation\n",
+    "[1.2]: Basics/1.2_Understanding_the_AWRA_Community_Modelling_System_package_and_its_modules_AWRAv6.ipynb\n",
+    "[1.3]: Basics/1.3_The_AWRA-CMS_Configuration_System.ipynb\n",
+    "[1.4]: Basics/1.4_AWRA-L_deconstructed_-_Python_version_of_AWRA-L_v6.ipynb\n",
+    "\n",
+    "[Simulation folder]: Simulation\n",
     "[On-Demand Simulation]: Simulation/OnDemandSimulation.ipynb\n",
     "[Simulation Server]: Simulation/SimulationServer.ipynb\n",
     "[Visualisation]: Visualisation/Visualisation.ipynb\n",
     "[Extraction]: Extraction/Extraction.ipynb\n",
-    "[Benchmarking folder]: /tree/Training/Benchmarking\n",
+    "[Benchmarking folder]: Benchmarking\n",
     "[Calibration]: Calibration/CalibrationExample.ipynb\n",
-    "[Overview of the AWRA-CMS functionality]: Workspace/Overview_of_the_AWRA_CMS_functionality.ipynb\n",
-    "[Advanced folder]: /tree/Training/Advanced\n",
+    "[Overview of the AWRA-CMS functionality]: Overview/Overview_of_the_AWRA_CMS_functionality.ipynb\n",
+    "[Advanced folder]: Advanced\n",
     "[Changing the model]: Advanced/ChangingTheModel.ipynb\n",
     "[Sensitivity analysis]: Advanced/Using_a_different_optimiser__Sensitivity_analysis_and_Sobol_sampling.ipynb\n",
     "[Changing the objective function]: Advanced/AlterObjectiveFunction_DownloadBoMdata.ipynb"
